[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/game_over.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scripts/RoomSelector.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 1 )

[node name="RoomSelector" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -824.0
margin_bottom = -572.0
rect_min_size = Vector2( 200, 28 )
script = ExtResource( 2 )

[node name="BodyContainer" type="CenterContainer" parent="."]
visible = false
margin_top = 28.0
margin_right = 200.0
margin_bottom = 100.0
rect_min_size = Vector2( 0, 72 )

[node name="ColorRect" type="ColorRect" parent="BodyContainer"]
margin_right = 200.0
margin_bottom = 72.0
rect_min_size = Vector2( 200, 72 )
color = Color( 0, 0, 0, 0.392157 )

[node name="Center" type="CenterContainer" parent="BodyContainer"]
margin_right = 200.0
margin_bottom = 72.0
rect_min_size = Vector2( 200, 72 )
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Players" type="VBoxContainer" parent="BodyContainer/Center"]
margin_right = 200.0
margin_bottom = 72.0
rect_min_size = Vector2( 200, 72 )
alignment = 1

[node name="You" type="Label" parent="BodyContainer/Center/Players"]
margin_top = 27.0
margin_right = 200.0
margin_bottom = 45.0
custom_colors/font_color = Color( 1, 0.921569, 0.552941, 1 )
custom_fonts/font = SubResource( 1 )
text = "You"
align = 1
valign = 1

[node name="TitleContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
margin_bottom = 28.0
rect_min_size = Vector2( 200, 28 )
rect_pivot_offset = Vector2( -43, -73 )

[node name="ColorRect" type="ColorRect" parent="TitleContainer"]
margin_right = 200.0
margin_bottom = 28.0
rect_min_size = Vector2( 200, 28 )
color = Color( 0, 0, 0, 0.392157 )

[node name="RoomLabel" type="Label" parent="TitleContainer"]
margin_left = 62.0
margin_right = 137.0
margin_bottom = 28.0
rect_min_size = Vector2( 0, 28 )
custom_colors/font_color = Color( 1, 0.921569, 0.552941, 1 )
custom_fonts/font = SubResource( 1 )
text = "Room #1 (2/4)"
align = 1
valign = 1

[node name="JoinRoomBtn" type="Button" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -40.0
margin_top = 4.0
margin_right = -4.0
margin_bottom = 24.0
rect_min_size = Vector2( 0, 16 )
size_flags_horizontal = 5
text = "Join"
align = 2
icon_align = 1

[node name="ExitRoomBtn" type="Button" parent="."]
visible = false
anchor_left = 1.0
anchor_right = 1.0
margin_left = -40.0
margin_top = 4.0
margin_right = -4.0
margin_bottom = 24.0
rect_min_size = Vector2( 0, 16 )
size_flags_horizontal = 5
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "Exit"
align = 2
icon_align = 1
